<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCrearRuleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_ruleta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etNombreRuleta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_la_ruleta"
        android:layout_below="@id/btnCrearRuleta"
        android:layout_marginTop="30dp"
        android:inputType="textCapWords"/>

    <Button
        android:id="@+id/btnCompartirWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartir_por_whatsapp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>
